[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Rooms/Living/Living-1.png" type="Texture" id=1]
[ext_resource path="res://Game/Rooms/Living/Living-2.png" type="Texture" id=2]
[ext_resource path="res://Game/Benny/Benny.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Rooms/Living/Living.gd" type="Script" id=4]
[ext_resource path="res://Game/Items/Ball/Ball.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Hole",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1298, 39 )

[node name="Living" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Normal"
centered = false

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( -580, 2 )

[node name="Collision" type="CollisionShape2D" parent="Floor"]
position = Vector2( 1281, 682 )
shape = SubResource( 2 )

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2( 643, -714 )
rotation = 1.57079

[node name="Collision" type="CollisionShape2D" parent="Floor2"]
position = Vector2( 1281, 682 )
shape = SubResource( 2 )

[node name="Floor3" type="StaticBody2D" parent="."]
position = Vector2( 2001, -714 )
rotation = 1.57079

[node name="Collision" type="CollisionShape2D" parent="Floor3"]
position = Vector2( 1281, 682 )
shape = SubResource( 2 )

[node name="Benny" parent="." instance=ExtResource( 3 )]
position = Vector2( 513, 453 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 600, -117 )
mass = 1.0
gravity_scale = 3.0

[node name="CameraPoints" type="Node2D" parent="."]

[node name="Pos1" type="Position2D" parent="CameraPoints"]

[node name="Pos2" type="Position2D" parent="CameraPoints"]
position = Vector2( 1280, 720 )
